# Django_Rest-Framework

./: .env  Makefile  README.md  cloudbuild.yaml  local_run.py  main.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: deploy.yml
backend/cfehome/: settings.py
plans/: Generate a mark down file with the implementation.md
tests/: test_scraper.py
